--- a/app-1-dep.yaml
+++ b/app-1-dep.yaml
@@ -1,19 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-1
+  name: app-1-dep
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: app-1
+      run: my-app-1
   template:
     metadata:
       labels:
         app: app-1
+        run: my-app-1
     spec:
       containers:
       - name: app-1
-        image: ghcr.io/denoslab/ensf400-sample-app:v3
+        image: ghcr.io/denoslab/ensf400-sample-app:v1
         ports:
-        - containerPort: 8080
+        - containerPort: 3000 # Port in container listening for traffic
