--- a/app-1-svc.yaml
+++ b/app-1-svc.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-1
+  labels:
+    run: my-app-1
 spec:
   selector:
     app: app-1
+    run: my-app-1
   ports:
-    - port: 80 # Default port for image
-      targetPort: 8080
-      protocol: TCP
+  - protocol: TCP
+    port: 8080
+    targetPort: 3000
