--- a/app-2-ingress.yaml
+++ b/app-2-ingress.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: nginx-canary
   annotations:
+    kubernetes.io/ingress.class: nginx
     ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/canary: "true"
     nginx.ingress.kubernetes.io/canary-weight: "30"
-    nginx.ingress.kubernetes.io/canary-by-header-value: "app2"
 spec:
   rules:
   - http:
