--- a/app-2-svc.yaml
+++ b/app-2-svc.yaml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-2
+  labels:
+    run: my-app-2
 spec:
   selector:
     app: app-2
+    run: my-app-2
+
   ports:
-    - port: 80 # Default port for image
-      targetPort: 8080
+    - port: 8080 # Default port for image
+      targetPort: 3000
       protocol: TCP
