--- a/nginx-svc.yaml
+++ b/nginx-svc.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - targetPort: 8080
+  - port: 80
     protocol: TCP
-    port: 80
+
   selector:
     run: my-nginx
