--- a/nginx-svc.yaml
+++ b/nginx-svc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-nginx
+  name: nginxsui
   labels:
-    run: my-nginx
+    run: nginxsui
 spec:
   type: ClusterIP
   ports:
@@ -11,4 +11,4 @@ spec:
     protocol: TCP
 
   selector:
-    run: my-nginx
+    run: nginxsui
