Changed app-1 names

--- a/app-1-dep.yaml
+++ b/app-1-dep.yaml
@@ -7,15 +7,15 @@ spec:
   selector:
     matchLabels:
       app: app-1
-      run: my-app-1
+      run: app-1-sui
   template:
     metadata:
       labels:
         app: app-1
-        run: my-app-1
+        run: app-1-sui
     spec:
       containers:
       - name: app-1
         image: ghcr.io/denoslab/ensf400-sample-app:v1
         ports:
-        - containerPort: 3000 # Port in container listening for traffic
+        - containerPort: 3000 
