--- a/app-2-dep.yaml
+++ b/app-2-dep.yaml
@@ -7,13 +7,13 @@ spec:
   selector:
     matchLabels:
       app: app-2
-      run: my-app-2
+      run: app-2-sui
       
   template:
     metadata:
       labels:
         app: app-2
-        run: my-app-2
+        run: app-2-sui
 
     spec:
       containers:
