--- a/nginx-dep.yaml
+++ b/nginx-dep.yaml
@@ -6,13 +6,13 @@ spec:
   selector:
     matchLabels:
       app: nginx
-      run: nginxsui
+      run: nginx-svc
   replicas: 5
   template:
     metadata:
       labels:
         app: nginx
-        run: nginxsui
+        run: nginx-svc
     spec:
       containers:
       - name: nginx
